tests/snapshots/pip_tools__dry_run.snap
---
source: tests/pip_tools.rs
info:
  program: migrate-to-uv
  args:
    - tests/fixtures/pip_tools/with_lock_file
    - "--dev-requirements-file"
    - requirements-dev.in
    - "--dev-requirements-file"
    - requirements-typing.in
    - "--dry-run"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
Migrated pyproject.toml:
[project]
name = ""
version = "0.0.1"
dependencies = ["arrow>=1.2.3"]

[dependency-groups]
dev = [
    "factory-boy>=3.2.1",
    "mypy>=1.13.0",
]

[tool.uv]
package = false
