tests/snapshots/pip_tools__skip_lock-2.snap
---
source: tests/pip_tools.rs
expression: "fs::read_to_string(project_path.join(\"pyproject.toml\")).unwrap()"
---
[project]
name = ""
version = "0.0.1"
dependencies = ["arrow>=1.2.3"]

[dependency-groups]
dev = [
    "factory-boy>=3.2.1",
    "mypy>=1.13.0",
]

[tool.uv]
package = false
