tests/snapshots/pip_tools__skip_lock_full-2.snap
---
source: tests/pip_tools.rs
expression: "fs::read_to_string(project_path.join(\"pyproject.toml\")).unwrap()"
---
[project]
name = ""
version = "0.0.1"
dependencies = [
    "arrow",
    "httpx[cli,zstd]==0.28.1",
    "uvicorn @ git+https://github.com/encode/uvicorn",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff==0.8.4",
    "mypy==1.14.1",
    "types-jsonschema==4.23.0.20241208",
]

[tool.uv]
package = false
